# jarvis

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.yml  installer.iss
.github/workflows/: build.yml
app/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
assets/: README.md
core/: CMakeLists.txt  action_predictor.cpp  action_predictor.h  attachments_manager.cpp  attachments_manager.h  auto_updater.cpp  auto_updater.h  claude_api.cpp  claude_api.h  code_actions.cpp  code_actions.h  command_registry.cpp  command_registry.h  embedded_key.h  jarvis.cpp  jarvis.h  jarvis_core_export.h  plugin_host.h  plugin_interface.h  plugin_manager.cpp  plugin_manager.h  project_indexer.cpp  project_indexer.h  session_memory.cpp  session_memory.h  theme.h  updater.cpp  updater.h  virtual_keyboard.cpp  virtual_keyboard.h
plugins/: CMakeLists.txt  plugins.json
scripts/: build_release.bat  generate_key.bat  prepare_release.bat  update.bat
